Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </div>
                 <div class="col-md-4">
                     <h6 class="text-uppercase mb-3">Contato</h6>
-                    <p class="small text-secondary">Av. das Nações, 1000<br>São Paulo - SP</p>
+                    <p class="small text-secondary">Av. Geraldo Silva Nascimento, 1000<br>IF GOIANO - URUTAÍ</p>
                 </div>
             </div>
             <hr class="border-secondary">
@@ -595,4 +595,5 @@
     }
 </script>
 </body>
+
 </html>
